# wip-pinephone-nuttx-apps

./: .gitignore  .gitmodules  config.nims
examples/: README.md
examples/fb/: fb_main.c
examples/hello/: hello_main.c
examples/hello_nim/: Makefile  hello_nim_async.nim  hello_nim_main.c
examples/hello_rust/: Makefile  hello_rust_main.rs
examples/leds/: leds_main.c
examples/lvgldemo/: lvgldemo.c
examples/lvglterm/: lvglterm.c
examples/rust/hello/: Cargo.toml
examples/rust/hello/src/: lib.rs
examples/usbserial/: usbserial_main.c
graphics/lvgl/port/: lv_port_touchpad.c
nshlib/: nsh_consolemain.c  nsh_session.c
system/nsh/: nsh_main.c
system/readline/: readline_common.c  readline_fd.c
